@@ -26,7 +26,7 @@ AUTHORS=$srcdir/AUTHORS
 AC_SUBST(PYGTK_REQ, 2.8.0)
 AC_SUBST(PYGST_REQ, 0.10.0)
 AC_SUBST(GST_REQ, 0.10.4)
-AC_SUBST(GNONLIN_REQ, 0.10.1)
+AC_SUBST(GNONLIN_REQ, 0.10.2)
 AC_SUBST(PYCAIRO_REQ, 1.0.0)
 
 AM_INIT_AUTOMAKE($PACKAGE, $VERSION)
